# Hackathon-The-Evaluation-Todo

./: README.md
backend/: Procfile  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/api/: __init__.py  auth.py  router.py  tasks.py
backend/src/core/: database.py
backend/src/db/: __init__.py
backend/src/schemas/: __init__.py  auth.py
backend/src/services/: auth.py
frontend/: vercel.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
history/prompts/001-todo-console-app/: 001-phase1-specifications-created.spec.prompt.md  002-implementation-plan-created.plan.prompt.md  003-task-breakdown-generated.tasks.prompt.md  004-implementation-complete.green.prompt.md
phase-1/console-todo/: README.md  __init__.py  main.py  pyproject.toml
phase-1/console-todo/cli/: __init__.py  colors.py  handlers.py  menu.py
phase-1/console-todo/exceptions/: __init__.py  errors.py
phase-1/console-todo/models/: __init__.py  task.py
phase-1/console-todo/services/: __init__.py  task_service.py
phase-1/console-todo/validators/: __init__.py  input_validators.py
phase-2/fullstack-web-app/: OVERVIEW.md  README.md  docker-compose.yml  package-lock.json
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs_history/phase_1/: add_task.spec.md  delete_task.spec.md  mark_complete.spec.md  update_task.spec.md  view_tasks.spec.md
specs_history/phase_2/: architecture.md  data-model.md  overview.md  plan.md  quickstart.md  research.md  tasks.md
(+56 files in other folders)
