[project]
name = "todo-backend"
version = "0.1.0"
description = "Phase II Todo Application Backend - FastAPI with SQLModel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
